--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,12 @@
 
 <h1>About Us</h1>
-<p>We are working on our One Month Rails Project</p>
+
+<h2> My name is Oswaldo Gino Abreu</h2>
+
+<h2> I am a visual designer. I currently work for Pandora, Media. in Oakland.</h2>
+<h2> I design a lot of Interfaces, emails, advertisement and website assets.</h2>
+
+<h2> I don't feel fulfilled simply designing stuff. I need to be able to implement my ideas as well.</h2></br>
+ <h2>That's when Programming becomes very appealing to me.</h2>
+
+
