import bootstrap template

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,12 +1,6 @@
-
-<h1>About Us</h1>
-
-<h2> My name is Oswaldo Gino Abreu</h2>
-
-<h2> I am a visual designer. I currently work for Pandora, Media. in Oakland.</h2>
-<h2> I design a lot of Interfaces, emails, advertisement and website assets.</h2>
-
-<h2> I don't feel fulfilled simply designing stuff. I need to be able to implement my ideas as well.</h2></br>
- <h2>That's when Programming becomes very appealing to me.</h2>
-
-
+<div class="jumbotron">
+    <div class="container">
+        <h1>About us</h1>
+        <p>This is the sample project I built for <a href="https://onemonthrails.com">One Month Rails</a>.</p>
+    </div>
+</div>
