--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,18 +11,20 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <h2>Visual Design</h2>
+                <p>My name is Oswaldo Gino Abreu. I am a visual designer currently working for Pandora, Media, in Oakland, California. </p>
+                <p>I currently design advertising campaigns for companies that will be running through Pandora Web and Mobile platforms. </p>
                 <p><%= link_to "View details", "#", class: "btn btn-secondary" %></p>
             </div>
             <div class="col-md-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <h2>Development</h2>
+                <p>My goal is to learn Front End Development and Ruby | Rails. </p>
+                <p>I would love to come up with ideas, design them and finally be able to develop them. </p>
                 <p><%= link_to "View details", "#", class: "btn btn-secondary" %></p>
             </div>
         <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <h2>Fine Arts</h2>
+            <p>Besides Design and Development, Drawing is my hobby. If I am not dedicating my time for development tutorials, I am probably drawing something. </p>
             <p><%= link_to "View details", "#", class: "btn btn-secondary" %></p>
         </div>
     </div>
