--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,10 @@
 <div class="jumbotron">
     <div class="container">
-        <h1>About us</h1>
-        <p>This is the sample project I built for <a href="https://onemonthrails.com">One Month Rails</a>.</p>
+        <h1>About me</h1>
+        <p>Hello, my name is Oswaldo Gino Abreu.</p>
+        <p>I graduated from USC, with a BFA in Design and Fine Arts. I am trying to learn web and software development. </p>
+        <p>I am currently designing for Pandora, Media. in Oakland, California.</p>
+        <p>My goal is to attend a Development Bootcamp by December 2017.</p>
+        <a href="https://www.instagram.com/o_gino_abreu/" target="_blank">My Instagram</a>.
     </div>
 </div>
