--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,9 +1,10 @@
+<div class="container">
 
+	<h1>This is how you can contact me!</h1>
 
-<h1>This is how you can contact me!</h1>
-
-<p>Oswaldo Gino Abreu</p>
-<ul>
-	<li>Phone: 510 735 1041</li>
-	<li>Email: oswaldoginoabreu@gmail.com</li>
+	<p>Oswaldo Gino Abreu</p>
+	<ul>
+		<li>Phone: 510 735 1041</li>
+		<li>Email: oswaldoginoabreu@gmail.com</li>
 </ul>
+</div>
